# martinezjas.dev

./: .gitignore  .pre-commit-config.yaml  README.md  forms.py  index.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: ossar.yml
helpers/: determine_themes.py  get_data.py  get_photo_info.py  hymn_themes_data.py  pull_info.py  search_engine.py
static/: himnario.db
static/css/: himnario_search.css
static/images/: output.css
static/js/: himnario_play.js  himnario_search.js  matrixrain.js
templates/: base.html  bible.html  construction.html  error_handle.html  himnario_doc.html  himnario_play.html  himnario_search.html  index.html  outage.html  search.html  search_results.html
